# ai-multi-reference-timekeeping

./: .gitignore  CMakeLists.txt  README.md  RESEARCH.md  pyproject.toml
configs/: README.md  gnss_dropout.yaml
cpp/include/aimrt/: api.hpp  chrony.hpp  (+14 more)
cpp/src/: api.cpp  bindings.cpp  characterization.cpp  chrony.cpp  config.cpp  daemon.cpp  fusion.cpp  kalman.cpp  logging.cpp  main_daemon.cpp  metrics.cpp  ml_model.cpp  observability.cpp  partitioning.cpp  references.cpp  safety.cpp  time_server.cpp
cpp/tests/: test_main.cpp
data/: README.md
environment/: README.md
models/: README.md
notebooks/: 00_overview.ipynb  10_test_fusion.ipynb  11_test_time_server.ipynb  12_gnss_dropout_mtie.ipynb
paper/: README.md
reproducibility/: README.md  compare_cpp_python.py
scripts/: README.md  ablation_gnss_dropout.py
src/: tomllib.py
src/ai_multi_reference_timekeeping/: __init__.py  api.py  characterization.py  chrony.py  cli.py  config.py  daemon.py  fusion.py  kalman.py  logging_utils.py  metrics.py  ml_model.py  models.py  observability.py  partitioning.py  references.py  safety.py  time_server.py
src/ai_multi_reference_timekeeping.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pydantic/: __init__.py
src/pydantic_settings/: __init__.py
tests/: conftest.py  test_characterization.py  test_chrony.py  test_config.py  test_fusion.py  test_integration_fixes.py  test_kalman.py  test_metrics.py  test_partitioning.py  test_safety.py  test_thread_safety.py  test_time_server.py  test_virtual_clock.py
tests/data/: offsets.csv
