[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-multi-reference-timekeeping"
version = "0.1.0"
description = "AI-assisted multi-reference timekeeping primitives"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = ["pydantic>=2.6", "pydantic-settings>=2.2"]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[project.scripts]
aimrt = "ai_multi_reference_timekeeping.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
